[package]
description = """
tpp (Tera Pre-Processor) is a command line utility for preprocessing files with the tera templating engine
"""
repository = "https://github.com/mcmah309/tpp"
edition = "2021"
license = "MIT"
name = "tpp"
readme = "README.md"
version = "0.1.0"

[features]
default = []

[dependencies]
clap = { version = "4.4.8", features = ["derive", "env", "unicode", "cargo"] }
color-eyre = "0.6"
serde = "1.0"
serde_json = { version = "1.0", optional = false }
serde_yaml = { version = "0.9", optional = false }
tera = "1.19.1"
toml = { version = "0.8", optional = false }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "tpp"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
